--- a/misc/.config/tridactyl/mozilla/userChrome.css
+++ b/misc/.config/tridactyl/mozilla/userChrome.css
@@ -167,3 +167,9 @@ findbar{
     margin-right: 16px;
     border-right: 1px solid var(--chrome-content-separator-color);
 }
+
+
+/* Always hide status-panel when the page is in fullscreen mode such as fullscreen video player */
+/* No effect on Firefox fullscreen mode (activated with F11 key) - except when the page is in fullscreen */
+
+:root[inDOMFullscreen] #statuspanel{ display: none !important }
